--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   get: 4.6.6
   flutter: 
     sdk: flutter
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
