--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   get_cli: ^1.8.4
   get: 4.6.6
-  flutter: 
-    sdk: flutter
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.3
+  cloud_firestore: 4.14.0
+  flutter: 
+    sdk: flutter
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
